--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gerenciador de Clientes</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
     <main>
-      <section id="app"></section>
-    </main>
-    <footer>
-      <ul class="navbar">
-        <li>
-          <a href="" class="navbar-link btn btn-primary client-search"
-            >Buscar Clientes</a
-          >
-        </li>
-        <li>
-          <a href="" class="navbar-link btn btn-primary">Cadastrar Corretor</a>
-        </li>
-        <li>
-          <a href="" class="navbar-link btn btn-link list-corretor"
-            >Corretores Cadastrados</a
-          >
-        </li>
-        <li>
-          <a href="" class="navbar-link btn btn-link">Clientes Cadastrados</a>
-        </li>
-      </ul>
-    </footer>
-  </body>
-  <script src="script.js"></script>
+        <section id="app"></section>
+      </main>
+      <footer>
+        <ul class="navbar">
+          <li>
+            <a href="" class="navbar-link btn btn-primary client-search"
+              >Buscar Clientes</a
+            >
+          </li>
+          <li>
+            <a href="" class="navbar-link btn btn-primary">Cadastrar Corretor</a>
+          </li>
+          <li>
+            <a href="" class="navbar-link btn btn-link list-corretor"
+              >Corretores Cadastrados</a
+            >
+          </li>
+          <li>
+            <a href="" class="navbar-link btn btn-link list-cliente">Clientes Cadastrados</a>
+          </li>
+        </ul>
+      </footer>
+      <script type="module" src="script.js"></script>
+</body>
 </html>
