--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <main>
-        <section id="app"></section>
+        <section id="app">
+          <div class="modal"></div>
+        </section>
       </main>
       <footer>
         <ul class="navbar">
