alteração iniciais no corpo do projeto

--- a/index.html
+++ b/index.html
@@ -1,38 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gerenciador de Clientes</title>
-
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <main>
-        <section id="app">
-          <div class="modal"></div>
-        </section>
-      </main>
-      <footer>
-        <ul class="navbar">
-          <li>
-            <a href="" class="navbar-link btn btn-primary client-search"
-              >Buscar Clientes</a
-            >
-          </li>
-          <li>
-            <a href="" class="navbar-link btn btn-primary">Cadastrar Corretor</a>
-          </li>
-          <li>
-            <a href="" class="navbar-link btn btn-link list-corretor"
-              >Corretores Cadastrados</a
-            >
-          </li>
-          <li>
-            <a href="" class="navbar-link btn btn-link list-cliente">Clientes Cadastrados</a>
-          </li>
-        </ul>
-      </footer>
-      <script type="module" src="script.js"></script>
-</body>
+<html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body></body>
+  <script type="module" src="script.js"></script>
 </html>
