--- a/index.html
+++ b/index.html
@@ -1,220 +1,67 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dashboard</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body id="app">
-    <nav class="sidebar">
-      <div class="menu">
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          width="16"
-          height="16"
-          fill="currentColor"
-          class="bi bi-list"
-          viewBox="0 0 16 16"
-        >
-          <path
-            fill-rule="evenodd"
-            d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"
-          />
-        </svg>
-      </div>
-      <ul class="navigation">
-        <li class="navigation-link">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-person"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M8 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0m4 8c0 1-1 1-1 1H3s-1 0-1-1 1-4 6-4 6 3 6 4m-1-.004c-.001-.246-.154-.986-.832-1.664C11.516 10.68 10.289 10 8 10s-3.516.68-4.168 1.332c-.678.678-.83 1.418-.832 1.664z"
-            />
-          </svg>
-          <button class="btn btn-navigation">Cliente</button>
-        </li>
-        <li class="navigation-link">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-person-lines-fill"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5 6s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zM11 3.5a.5.5 0 0 1 .5-.5h4a.5.5 0 0 1 0 1h-4a.5.5 0 0 1-.5-.5m.5 2.5a.5.5 0 0 0 0 1h4a.5.5 0 0 0 0-1zm2 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1zm0 3a.5.5 0 0 0 0 1h2a.5.5 0 0 0 0-1z"
-            />
-          </svg>
-          <button class="btn btn-navigation">Corretor</button>
-        </li>
-        <li class="navigation-link">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="16"
-            height="16"
-            fill="currentColor"
-            class="bi bi-card-list"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"
-            />
-            <path
-              d="M5 8a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7A.5.5 0 0 1 5 8m0-2.5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m0 5a.5.5 0 0 1 .5-.5h7a.5.5 0 0 1 0 1h-7a.5.5 0 0 1-.5-.5m-1-5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0M4 8a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0m0 2.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0"
-            />
-          </svg>
-          <button class="btn btn-navigation">Listar</button>
-        </li>
-      </ul>
-    </nav>
-    <main class="board cliente-page">
-      <header>
-        <h2>Consultar Cliente</h2>
-        <form id="consultar-cliente">
-          <input
-            name="cpf"
-            type="text"
-            required
-            placeholder="12345678900"
-            maxlength="11"
-          />
-          <button class="btn btn-primary">Consultar</button>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cadastra Clientes</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <header>
+        <h2>Consultar</h2>
+        <form id="consulta">
+            <div class="inputs-form">
+                <select name="parametro" id="parametro">
+                    <option value="cliente">cliente</option>
+                    <option value="corretor">corretor</option>
+                </select>
+                <input name="cpf" type="text" maxlength="14" placeholder="Insira o cpf">
+            </div>
+            <button type="submit" name="consulta">Consultar</button>
         </form>
-      </header>
-      <section class="form-cliente-info">
-        <form id="clienteForm">
-          <div class="form-container">
-            <div class="form-group">
-              <label for="nome">Nome:</label>
-              <input
-                class="form-input"
-                type="text"
-                id="nome"
-                name="nome"
-                required
-                disabled
-              />
+    </header>
+    <main id="app">
+        <section class="modal-dados-consultados">
+            <div class="dados-consultados">
+                <div class="dados-cliente">
+                    <span>nome</span>
+                    <span>cpf</span>
+                    <span>telefone</span>
+                    <span>endereco completo</span>
+                </div>
+                <div class="dados-corretor">
+                    <span>nome</span>
+                    <span>cpf</span>
+                    <span>telefone</span>
+                </div>
             </div>
-            <div class="form-group">
-              <label for="cpf">CPF:</label>
-              <input type="text" id="cpf" name="cpf" required disabled />
+            <div class="dados-manipulacao">
+                <button>Editar</button>
+                <button>Excluir</button>
             </div>
-            <div class="form-group">
-              <label for="telefone">Telefone:</label>
-              <input
-                class="form-input"
-                type="text"
-                id="telefone"
-                name="telefone"
-                required
-                disabled
-              />
-            </div>
-          </div>
-
-          <div class="form-container">
-            <div class="form-group">
-              <label for="rua">Rua:</label>
-              <input
-                class="form-input"
-                type="text"
-                id="rua"
-                name="rua"
-                required
-                disabled
-              />
-            </div>
-            <div class="form-group">
-              <label for="numero">Número:</label>
-              <input
-                class="form-input"
-                type="text"
-                id="numero"
-                name="numero"
-                required
-                disabled
-              />
-            </div>
-            <div class="form-group">
-              <label for="bairro">Bairro:</label>
-              <input
-                class="form-input"
-                type="text"
-                id="bairro"
-                name="bairro"
-                required
-                disabled
-              />
-            </div>
-            <div class="form-group">
-              <label for="cidade">Cidade:</label>
-              <input
-                class="form-input"
-                type="text"
-                id="cidade"
-                name="cidade"
-                required
-                disabled
-              />
-            </div>
-            <div class="form-group">
-              <label for="uf">UF:</label>
-              <input
-                class="form-input"
-                type="text"
-                id="uf"
-                name="uf"
-                required
-                disabled
-              />
-            </div>
-            <div class="form-group">
-              <label for="cep">CEP:</label>
-              <input
-                class="form-input"
-                type="text"
-                id="cep"
-                name="cep"
-                required
-                disabled
-              />
-            </div>
-          </div>
-          <div class="form-container">
-            <div class="form-group">
-              <label for="corretor_id">Corretor:</label>
-              <input type="text" name="corretorSpan" disabled />
-              <select
-                class="form-input"
-                id="corretor_id"
-                name="corretor_id"
-                required
-                disabled
-              >
-                <option value="" selected>Selecione um corretor</option>
-              </select>
-            </div>
-          </div>
-          <input type="hidden" name="id" />
-          <div class="form-container cadastro">
-            <button name="cadastrar" disabled>Cadastrar</button>
-          </div>
-          <div class="form-container actions">
-            <button name="excluir" disabled>Excluir</button>
-            <button name="editar" disabled onclick="editarCliente()">
-              Editar
-            </button>
-          </div>
-        </form>
-      </section>
+        </section>
+        <section class="cadastro-edicao">
+            <form id="formulario-cadastro-edicao">
+                <div class="form-container">
+                    <label for="nome">Nome: </label>
+                    <input type="text" name="nome" id="nome">
+                </div>
+                <div class="form-container">
+                    <label for="cpf">CPF: </label>
+                    <input type="text" name="cpf" id="cpf">
+                </div>
+                <div class="form-container">
+                    <label for="telefone">Telefone: </label>
+                    <input type="text" name="telefone" id="telefone">
+                </div>
+                <div class="form-endereco">
+                    <div class="form-container">
+                        <label for="telefone">Rua: </label>
+                        <input type="text" name="rua" id="rua">
+                    </div>
+                </div>
+            </form>
+        </section>
     </main>
-  </body>
-  <script type="module" src="script.js"></script>
+</body>
 </html>
