organização de código

--- a/index.html
+++ b/index.html
@@ -7,11 +7,18 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <nav class="navbar">
+      <button class="listar-corretores">Listar Corretores</button>
+      <button class="cadastrar-corretor">Cadastrar Corretor</button>
+    </nav>
     <header></header>
     <main id="app">
       <section class="modal-dados-consultados"></section>
       <section class="cadastro-edicao"></section>
     </main>
+    <div class="modal-listagem">
+      
+    </div>
   </body>
   <script type="module" src="script.js"></script>
 </html>
