--- a/index.html
+++ b/index.html
@@ -16,9 +16,7 @@
       <section class="modal-dados-consultados"></section>
       <section class="cadastro-edicao"></section>
     </main>
-    <div class="modal-listagem">
-      
-    </div>
+    <div class="modal-listagem"></div>
   </body>
   <script type="module" src="script.js"></script>
 </html>
